--- a/identidock/Dockerfile
+++ b/identidock/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.4
 
 RUN groupadd -r uwsgi && useradd -r -g uwsgi uwsgi
 RUN pip install --upgrade pip
-RUN pip install Flask==0.10.1 uWSGI requests==2.5.1
+RUN pip install Flask==0.10.1 uWSGI
+RUN pip install requests
 RUN pip install redis
-
+#RUN pip install gunicon
 WORKDIR /app
 COPY app /app
 COPY cmd.sh /
